# shorewall-nft-netkit

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build.yaml  tests.yaml
shorewall_nft_netkit/: __init__.py  netns_fork.py  netns_shell.py  nsstub.py  packets.py  tundev.py
shorewall_nft_netkit/validators/: __init__.py  connstate.py  nat_verify.py  tc_validate.py
tests/: test_nat_verify.py  test_netns_fork.py  test_nsstub_orphan.py  test_package_imports.py  test_validators_connstate.py  test_validators_tc.py
